Apply css to fix nav bar text cut off at bottom

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -52,14 +52,17 @@ body {
 .navbar ul li button.nav-link{
   color: #fff8ed!important;
   display: flex;
-  text-decoration: none;
   padding: 5px 10px;
-  line-height: 1.5;
+  text-decoration: none;
+  line-height: 1.6;
   background: none;
   border: none;
   cursor: pointer;
   display: flex;
   align-items: center;
+  padding-bottom: 8px;
+  vertical-align: middle;
+  min-height: 60px;
 }
 
 .navbar ul li a.nav-link:hover,
